@@ -1,3 +1,6 @@
+HEAD
+	+ Restart squid when failover events are produced to avoid problems
+	+ Do not check host when adding a ping to gateway rule in WAN Failover
 1.4.1
 	+ Do not run ifdown for network interfaces when network is started from
 	  /etc/init.d/ebox start This seems to avoid some issues with DHCP
